--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,13 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         </activity>
+
+        <service
+            android:name=".MyService"
+            android:label="asshole"
+            >
+        </service>
+
     </application>
 
 </manifest>
